exports[`ArraySchema Class normalizes a single entity 1`] = `
Object {
  "entities": Object {
    "cats": Object {
      "1": Object {
        "id": 1,
      },
      "2": Object {
        "id": 2,
      },
    },
  },
  "result": Array [
    1,
    2,
  ],
}
`;

exports[`ArraySchema Class normalizes multiple entities 1`] = `
Object {
  "entities": Object {
    "cats": Object {
      "123": Object {
        "id": "123",
        "type": "cats",
      },
      "456": Object {
        "id": "456",
        "type": "cats",
      },
    },
    "person": Object {
      "123": Object {
        "id": "123",
        "type": "people",
      },
    },
  },
  "result": Array [
    Object {
      "id": "123",
      "schema": "cats",
    },
    Object {
      "id": "123",
      "schema": "people",
    },
    Object {
      "id": Object {
        "id": "789",
      },
      "schema": "dogs",
    },
    Object {
      "id": "456",
      "schema": "cats",
    },
  ],
}
`;

exports[`ArraySchema Class normalizes multiple entities 2`] = `
Array [
  Array [
    Object {
      "id": "123",
      "type": "cats",
    },
    Array [
      Object {
        "id": "123",
        "type": "cats",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
      },
      Object {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  Array [
    Object {
      "id": "123",
      "type": "cats",
    },
    Array [
      Object {
        "id": "123",
        "type": "cats",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
      },
      Object {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  Array [
    Object {
      "id": "123",
      "type": "people",
    },
    Array [
      Object {
        "id": "123",
        "type": "cats",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
      },
      Object {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  Array [
    Object {
      "id": "123",
      "type": "people",
    },
    Array [
      Object {
        "id": "123",
        "type": "cats",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
      },
      Object {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  Array [
    Object {
      "id": "789",
    },
    Array [
      Object {
        "id": "123",
        "type": "cats",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
      },
      Object {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  Array [
    Object {
      "id": "789",
    },
    Array [
      Object {
        "id": "123",
        "type": "cats",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
      },
      Object {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  Array [
    Object {
      "id": "456",
      "type": "cats",
    },
    Array [
      Object {
        "id": "123",
        "type": "cats",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
      },
      Object {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
  Array [
    Object {
      "id": "456",
      "type": "cats",
    },
    Array [
      Object {
        "id": "123",
        "type": "cats",
      },
      Object {
        "id": "123",
        "type": "people",
      },
      Object {
        "id": "789",
      },
      Object {
        "id": "456",
        "type": "cats",
      },
    ],
    null,
  ],
]
`;

exports[`ArraySchema Object passes its parent to its children when normalizing 1`] = `
Object {
  "entities": Object {
    "children": Object {
      "4": Object {
        "content": "child",
        "id": 4,
        "parentId": 1,
        "parentKey": "children",
      },
    },
    "parents": Object {
      "1": Object {
        "children": Array [
          4,
        ],
        "content": "parent",
        "id": 1,
      },
    },
  },
  "result": 1,
}
`;
